comments voor kleuren van website

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,1 +1,6 @@
-/*  */
+/* #1BBCB6 = blauw */
+/* #E30613 = rood */
+/* #5B5B5B = donker grijs*/
+/* #303030 = footer achtergrond kleur */
+/* #FFFFFF = wit voor achtergrond kleur */
+/* #000000 = zwart voor logo's */
