--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,17 +19,50 @@ h1, h2, h3{
 
         /* bovenste navigatie */
 
+nav{
+    display: flex;
+    justify-content: space-between;
+}
+
 nav ul{
     list-style: none;
     display: flex;
+    font-size: 17px;
 }
 
+nav ul li{
+    height: 100%;
+}
+nav ul li a h1{
+    height: 100%;
+    padding-right: 2em;;
+}
+nav ul li a h1:hover{
+    color: #1BBCB6;
+}
 nav ul li a{
     text-decoration: none;
 }
 
-.ehb-logo{
-    width: 60.85em;
-    height: auto;
+.ehb_logo{
+    width: auto;
+    height: 54px;
     margin-left: 10px;
+}
+
+.rechter_navigatie{
+    
+    display: flex;
+    width: 7em;
+    height: auto;
+    justify-content: space-between;
+}
+
+.rechter_navigatie img{
+    background-color: blue;
+    width: 100%;
+    height: 100%;
+}
+.rechter_navigatie a{
+    padding-left:
 }
