--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,6 +15,9 @@ h1, h2, h3{
     color: #000000;
     font-weight: bold;
 }
+body{
+    margin: 0em 1em;
+}
 /* homepage */
 
         /* bovenste navigatie */
@@ -51,18 +54,20 @@ nav ul li a{
 }
 
 .rechter_navigatie{
-    
     display: flex;
-    width: 7em;
+    width: 10em;
     height: auto;
     justify-content: space-between;
 }
 
 .rechter_navigatie img{
-    background-color: blue;
     width: 100%;
     height: 100%;
 }
+
 .rechter_navigatie a{
-    padding-left:
+    padding-left: 1em;
+}
+.rechter_navigatie a:hover{
+    filter: invert(58%) sepia(17%) saturate(6855%) hue-rotate(139deg) brightness(103%) contrast(79%);
 }
