--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -101,16 +101,51 @@ nav ul li a{
 #zoek_btn{
     background: none;
     border: none;
+    margin-right: 1em;
 }
+.zoekbalk select{
+    background: none;
+    border: none;
+    color: #5B5B5B;
+    width: 10%;
+    margin-left: 1em;
+    background: url(/images/svg/sliders-solid.svg) no-repeat center;
+    background-size: 20%;
+}
+.zoekbalk select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+  }
+  .zoekbalk select:focus{
+    outline: none;
+  }
+
         /* categorie lijst */
 
 .categorie a{
+    margin-top: 1em;
     text-decoration: none;
+    display: block;
 }
 .categorie_lijst{
     list-style: none;
+    display: flex;
+    justify-content: center;
+    margin-top: 1em;
 }
 .categorie_lijst a{
     text-decoration: none;
-    color: #000000;
+    color: white;
+    font-weight: bold;
+    letter-spacing: 1px;
+    background-color: #1BBCB6;
+    padding: 3em;
+    border-radius: 2em;
+    margin-right: 3em;
+    width: 5em;
+    text-align: center;
 }
+
+        /* Recent bekeken */
