homepagina css klaar

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -94,6 +94,9 @@ nav ul li a{
     width: 95%;
     margin-left: 1em;
 }
+#zoek_input:focus{
+    outline: none;
+}
 #zoek_btn img{
     height: 80%;
     width: 70%;
@@ -118,11 +121,12 @@ nav ul li a{
     text-indent: 1px;
     text-overflow: '';
   }
-  .zoekbalk select:focus{
+.zoekbalk select:focus{
     outline: none;
-  }
+}
 
         /* categorie lijst */
+
 
 .categorie a{
     margin-top: 1em;
@@ -149,3 +153,83 @@ nav ul li a{
 }
 
         /* Recent bekeken */
+
+.recent_lijst_container{
+    display: flex;
+    justify-content:space-between;
+}
+.recent_lijst_container img{
+    width: 2em;
+    margin: 1em;
+}
+.recent_container{
+    display: block;
+}
+.recent_container h2{
+    margin: 1em 0em;
+}
+.recent_lijst{
+    display: flex;
+    margin-top: 1em;
+    width: 80%;
+    list-style: none;
+    margin: auto;
+    justify-content: space-between;
+}
+.recent_lijst a{
+    text-decoration: none;
+}
+.recent_lijst li{
+    margin: auto;
+    background-color: #edededcf;
+    margin-right: 1em;
+    height: 80%;
+    width: 20%;
+    text-align: center;
+    border-radius: 1em;
+}
+.recent_lijst li img{
+    width: 70%;
+    height: 50%;
+    background-color: white;
+    margin-top: 1em;
+}
+
+        /* Hoe leen je iets uit? */
+
+.uitleen_uitleg ul{
+    list-style: none;
+    display: flex;
+    margin-top: 1em;
+    justify-content: space-between;
+    margin: auto;
+    width: 80%;
+}
+.uitleen_uitleg h2{
+    margin: 1em 0em;
+}
+.uitleen_uitleg ul li{
+    width: 15%;
+    height: 8em;
+    border-radius: 1em;
+    text-align: center;
+    background-color: #1BBCB6;
+}
+.uitleen_uitleg ul li a{
+    text-decoration: none;
+    padding: 1em;
+    color: white;
+}
+.meer_info{
+    background-color: rgb(193, 193, 193);
+    border-radius: 1em;
+    width: 10%;
+    text-align: center;
+    margin: 1.5em 0em 0em 74em;
+}
+.meer_info a{ 
+    text-decoration: none;
+    color: white;
+}
+
+        
