--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -254,3 +254,38 @@ nav ul li a{
     background-color: rgb(193, 193, 193);
     padding: 0em 1em;
 }
+
+        /* apparaat */
+.apparatenlijst{
+    display: flex;
+    width: 97%;
+    height: 12em;
+    list-style: none;
+    margin: auto;
+}
+.apparaat{
+    width: 100%;
+    height: 100%;
+    border-radius: 2em;
+    background-color: green;
+    margin-top: 1em;
+}
+.apparaat a{
+    display: flex;
+    justify-content: space-between;
+    text-decoration: none;
+    color:#000000;
+    align-items: center;
+}
+.apparaat_foto{
+    height: 10em;
+    margin: 1em;
+    width: auto;
+    background: white;
+    border-radius: 2em;
+}
+.toevoegen{
+    display: flex;
+    width: 4em;
+    background-color: #1BBCB6;
+}
