--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -278,7 +278,7 @@ nav ul li a{
     width: 100%;
     height: 100%;
     border-radius: 2em;
-    background-color: tomato;
+    background-color: rgb(193, 193, 193);
     margin-top: 1em;
 }
 .apparaat a{
@@ -319,7 +319,7 @@ nav ul li a{
 
 /*Footer*/
 footer{
-    position: relative;
+    
     background-color: #303030;
     color: white;
 }
