--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -371,8 +371,89 @@ border: 0.05em solid white;
 }
 
 .einde {
-    background-color: red;
+    background-color: #E30613;
     text-align: center;
     padding: 0.5em;
     font-size: large;
+}
+
+/* apparaat info */
+.apparaat_info{
+    background-color: rgb(193, 193, 193);
+    width: 80%;
+    margin: auto;
+    margin-top: 2em;
+    border-radius: 2em;
+    padding-bottom: 2em;
+}
+
+.apparaat_info_container{
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+}
+.download_handleiding{
+    list-style: none;
+}
+.download_handleiding img{
+    background-color: white;
+    border-radius: 2em;
+    width: 70%;
+    margin: 2em 0em 0em 2em;
+}
+.download_handleiding a{
+    background-color: #1BBCB6;
+    text-decoration: none;
+    color: white;
+    padding: 1em;
+    border-radius: 2em;
+}
+.download_handleiding li{
+    margin: 3em 0em 0em 2em;
+}
+
+.apparaat_beschrijving{
+    margin: 2em 0em 0em 0em;
+    width: 60%;
+}
+.apparaat_beschrijving h2{
+    margin: 0em 0em 1em 0em;
+}
+.apparaat_beschrijving li{
+    margin: 0.5em 0em;
+}
+.doos_kolom{
+    display: block;
+    justify-content: space-between;
+    margin: 2em 0em 0em 0em;
+    width: 50%;
+}
+.doos_kolom h2{
+    margin: 0em 0em 1em 0em;
+}
+.doos_kolom li{
+    margin: 0.5em 0em;
+}
+
+.doos_kolom .defecten{
+    margin: 2em 0em 0em 0em;
+    color: #E30613;
+}
+
+.reservatie{
+    margin: 3em 0em 1em 2em;
+}
+.reservatie_plaatsen{
+    background-color: #1BBCB6;
+    width: 80%;
+    margin: auto;
+    border-radius: 2em;
+    display: flex;
+    list-style: none;
+}
+.reservatie_plaatsen li{
+    text-decoration: none;
+    color: white;
+    padding: 1em;
+    display: flex;
 }
