--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -78,8 +78,7 @@ nav ul li a {
 /*  zoekbalk */
 
 .zoekbalk_container {
-  background: url(/images/jpg/jj-ying-7JX0-bfiuxQ-unsplash\\(1\).jpg) no-repeat
-    center center/cover;
+  background: url(/images/jpg/jj-ying-7JX0-bfiuxQ-unsplash.jpg) no-repeat center center/cover;
   height: 6em;
   display: flex;
 }
