--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -783,3 +783,67 @@ footer {
   font-size: 20px;
   letter-spacing: 1px;
 }
+
+/* kalender pagina */
+.agendaEnTerug{
+    display: flex;
+}
+.agendaEnTerug img{
+    width: 1.5em;
+    height: auto;
+    margin: 1.5em;
+}
+.agendaEnTerug h1{
+    margin: 0.6em 0.5em 0em 0.5em;
+}
+.subtitel, .jaarkalender h2{
+    color: #5B5B5B;
+    margin: 0.5em 4em;
+}
+.jaarkalender p{
+    margin: 0em 6em;
+}
+.jaarkalender p b{
+    color: #E30613;
+}
+.jaarkalender table{
+  width: 80%;
+  margin: 3em auto;
+  border-collapse: collapse;
+}
+
+.jaarkalender table .uitleg{
+  text-align: right;
+  padding-left: 0em;
+  border-bottom: 2px solid rgb(193, 193, 193);
+}
+.jaarkalender table tr td{
+  padding: 1em;
+  border-bottom: 2px solid rgb(193, 193, 193);
+}
+.jaarkalender table tr td:first-child{
+  border-right: 2px solid rgb(193, 193, 193);
+}
+.jaarkalender table tr:last-child td{
+  border-bottom: none;
+  padding: 1em;
+}
+
+.activiteit{
+  display: flex;
+  align-items: center;
+  margin-left: 2em;
+}
+.activiteit img{
+  width: 25%;
+  margin: 1em 3em 0em 5em;
+}
+.info_activiteit{
+  width: 40%;
+}
+.info_activiteit p{
+  margin: 1.5em 0em;
+}
+.info_activiteit h4{
+  color:#1bbcb6;
+}
