--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -626,6 +626,7 @@ footer {
 .reservatie_plaatsen {
   background-color: #1bbcb6;
   width: 80%;
+  height: 6em;
   margin: auto;
   border-radius: 2em;
   display: flex;
@@ -636,6 +637,64 @@ footer {
   color: white;
   padding: 1em;
   display: flex;
+}
+.aantal{
+  background-color: white;
+  border-radius: 2em;
+  margin: auto;
+  width: 13%;
+  height: 10%;
+  align-items: center;
+}
+.aantal label{
+  color: black;
+  font-weight: bold;
+}
+.aantal input{
+  border: none;
+  width: 100%;
+  height: 2em;
+  text-align: center;
+  font-size: 14px;
+}
+.reserveer_nu_btn{
+  width: 14%;
+  background-color: white;
+  height: 10%;
+  border-radius: 2em;
+  margin: auto;
+  align-items: center;
+}
+.reserveer_nu_btn a{
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+  text-align: center;
+  margin: 0em auto;
+}
+.winkelmand_toevoegen_btn{
+  background-color: white;
+  height: 10%;
+  margin-right: 1em;
+  margin: auto;
+  align-items: center;
+  width: 10%;
+  border-radius: 2em;
+}
+.winkelmand_toevoegen_btn button{
+  border: none;
+  background-color: white;
+  font-weight: bold;
+  font-size: 16px;
+}
+.winkelmand_toevoegen_btn img{
+  width: 20%;
+  margin: 0em 0em 0em 0.2em
+}
+
+.datum{
+  display: flex;
+  flex-direction: column;
 }
 
 /* kits */
@@ -811,7 +870,9 @@ footer {
   margin: 3em auto;
   border-collapse: collapse;
 }
-
+.jaarkalender table b{
+  color:#E30613;
+}
 .jaarkalender table .uitleg{
   text-align: right;
   padding-left: 0em;
