--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -964,3 +964,18 @@ footer {
   top: 0.5em;
   right: 1em;
 }
+
+/* annuleren van reservatie */
+.annulerenEnTerug{
+  display: flex;
+}
+.annulerenEnTerug img{
+  width: 1.5em;
+  height: auto;
+  margin: 1.5em;
+}
+.annulerenEnTerug h1{
+  margin: 0.6em 0.5em 0em 0.5em;
+}
+
+/* defect melden */
