--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1011,8 +1011,43 @@ footer {
   border-radius: 2em;
 }
 
-.beschrijving_defect{
-  width: 80%;
+.beschrijving_defect {
+  width: 90%;
   margin: auto;
-  height: 5em;
+  height: 20em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2em;
+  color: black;
+  border: 0.5px solid grey;
+  border-radius: 2em;
+  padding: 1em;
+  margin-bottom: 1em;
+}
+.beschrijving_defect:focus {
+  border: none;
+  outline: 0.5px solid #1bbcb6;
+}
+.beschrijving_defect::placeholder{
+  height: 100%;
+  text-wrap: wrap;
+  font-size: 16px;
+}
+.beschrijf{
+  margin: 0em 0em 0em 4em;
+}
+
+/* defect melden final bevestiging */
+
+.melding h2{
+  margin: 2em 0em 0em 2em;
+}
+.melding p{
+  width: 85%;
+  margin: auto;
+  background-color: rgb(193, 193, 193);
+  padding: 4em;
+  border-radius: 1em;
+  margin-top: 2em;
 }
