--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -419,6 +419,35 @@ opacity: 1;
 }
 
 /* form  */
+.info-form-h1 {
+  font-size: 1.5em;
+  margin-top: 2em;
+  text-align: center;
+  color: #1bbcb6;
+}
+
+.info-form{
+  display: flex;
+  flex-direction: column;
+ align-items: center;
+}
+
+.info-text input[type=text]{
+width: 70em;
+height: 15em;
+background-color: #5B5B5B;
+border: #5B5B5B;
+color: #fff;
+
+}
+.info-submit input[type=submit]{
+  background-color: #1bbcb6;
+  border-radius: 1em;
+  width: 7em;
+  height: 2em;
+  margin: 1em auto 1em auto  ;
+  border: 0;
+}
 
 
 
